client/src/index.css
:root {
  --primary: #000000;
}

html {
  position: relative;
  min-height: 100%;
}

/* Add a black background color to the top navigation */
.topnav {
  background-color: #333;
  overflow: hidden;
  padding: 5px 0;
}

/* Style the links inside the navigation bar */
.topnav a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;

}

/* Change the color of links on hover */
.topnav a.link:hover {
  background-color: #ddd;
  color: black;
}

/* Add a color to the active/current link */
.topnav a.link.active {
  background-color: #04AA6D;
  color: white;
}

/* Match footer to navbar styling */
footer {
  background-color: #333;
  overflow: hidden;
  padding: 15px 5px;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
}

/* Set color of text in footer to match navbar */
footer h4, footer p {
  color: #f2f2f2;
  text-align: center;
  font-size: 15px;
  padding: 0;
  margin: 0;
}

/* Styling for About page hero */
.bgimage {
  width:100%;
  height:500px;
  background: url('../public/images/hero.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-attachment: fixed;
}
.bgimage h1 ,.bgimage h3 {
  color:white;
  text-shadow:2px 2px #333;
  text-align: center;
  padding: 50px;
}
.bgimagehome {
  width: auto;
  height: 100%;
  background: url('../public/images/pikwizard-coffee-beans-arranged-on-wooden-table.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-attachment: fixed;
}

/* format home page feature image */
.homefeatureimg {
  width: 100%;
  max-width: 1000px;
  border-radius: 90% 5% 60% 10%;
  padding: 25px 0 25px 0;
}

/* format homepage shop name */
.hometitle {
  font-size: 50px;
  font-weight: lighter;
  letter-spacing: 20px;
}

/* Create a card layout for the homepage feature sections */
.homecard {
  max-width: 750px;
  border-radius: 15px;
  padding: 65px 0;
  margin: 0 auto;
  text-align: center;
  align-items: center;
}

/* Format images in homepage cards */
.homecard img {
  width: 350px;
  border-radius: 50%;
}


a {
  color: #B12704;
  text-decoration: none;
  font-weight: bold;
}

a:hover {
  text-decoration: underline;
}

.cartItem {
color: black;
}

.cart {
  position: fixed;
  top: 100px;
  right: 0px;
  max-width: 30%;
  max-height: 60%;
  overflow: auto;
  padding: .5rem;
  box-shadow: 0 0 1rem rgba(0, 0, 0, .5);
  border-bottom-left-radius: .5rem;
}

.cart h2 {
  font-size: 1.5rem;
  border-bottom: 1px solid;
  padding-bottom: .5rem;
  margin: 1rem 0;
}

.cart img {
  width: 70px;
  margin-right: 1rem;
}

.menuItem {
  width: 25%;
  text-align: center;
}

.menuItemList {
  width: 75%;
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}

.menuItemImage {
  max-width: 65%;
}

.coffee {
  float: right;
  width: 30%;
  margin: 30px;
}

.about {
  width: 50%;
  margin: 30px;
  align-content: center;
  padding: 100px;
  font-family: Arial, Helvetica, sans-serif;
  border-style: double;
  border-bottom: #000000 4px;
  background-color: #04AA6D;
}

.checkmark {
  border-radius: 200px;
  height: 200px;
  width: 200px;
  background: #83d40a;
  margin: 0 auto;
  color: #dde6d0;
  font-size: 100px;
  line-height: 200px;
}

.btn.btn-success.active.focus,
.btn.btn-success.active:focus,
.btn.btn-success.active:hover,
.btn.btn-success:active.focus,
.btn.btn-success:active:focus,
.btn.btn-success:active:hover {
  color: #fff;
  background-color: #5cb85c;
  border-color: #5cb85c;
  outline: none;
  box-shadow: none;
}

#login .container #login-row #login-column #login-box {
  margin-top: 120px;
  max-width: 100%;
  height: 100%;
  border: 1px solid #9C9C9C;
  background-color: #EAEAEA;
  padding: 20px;
}
#login .container #login-row #login-column #login-box #login-form {
  padding: 20px;
}
#login .container #login-row #login-column #login-box #login-form #register-link {
  margin-top: -85px;
}

#login .container {
  padding-bottom: 50px;
}

@media screen and (max-width: 768px) {
  .cart {
    position: relative;
    max-width: 100%;
    max-height: auto;
    box-shadow: none;
    background-color: inherit;
  }
  .card {
    width: 100%;
  }
  .about {
    float: left;
    width: 100%;
    margin: 10px;
    align-content: center;
    padding: 10px;
  }
}

